@@ -1,1 +1,8 @@
+#A connect4 game made with javaFX
 
+intellij vm module reference
+
+--module-path
+C:\javafx-sdk-17.0.1\lib
+--add-modules
+javafx.controls,javafx.fxml
